--- a/Sistemas/Mercado/src/main/java/view/DialogAlteraSenha.form
+++ b/Sistemas/Mercado/src/main/java/view/DialogAlteraSenha.form
@@ -3,6 +3,7 @@
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JDialogFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
+    <Property name="title" type="java.lang.String" value="Alterar Senha"/>
     <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[421, 318]"/>
     </Property>
@@ -42,11 +43,11 @@
           <Font name="Arial" size="22" style="1"/>
         </Property>
         <Property name="horizontalAlignment" type="int" value="4"/>
-        <Property name="text" type="java.lang.String" value="Alterar Senha"/>
+        <Property name="text" type="java.lang.String" value="Digite uma nova Senha"/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="140" y="30" width="-1" height="-1"/>
+          <AbsoluteConstraints x="80" y="20" width="-1" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
