--- a/Sistemas/Mercado/src/main/java/view/FormVenda.form
+++ b/Sistemas/Mercado/src/main/java/view/FormVenda.form
@@ -9,7 +9,7 @@
     <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[1280, 678]"/>
     </Property>
-    <Property name="name" type="java.lang.String" value="Vendas" noResource="true"/>
+    <Property name="name" type="java.lang.String" value="Nova Vendas" noResource="true"/>
     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[1280, 678]"/>
     </Property>
